Lots of stuff, divide project for directories and finish bookmarklet, include external files into js code.

--- a/src/floating.html
+++ b/src/floating.html
@@ -8,7 +8,9 @@
 		<tbody>
 			<tr class="line1">
 				<th>Przedmiot</th>
-				<td><select id="avSubject" tabindex="0" class="left"></select></td>
+				<td>
+					<select id="avSubject" tabindex="0" class="left"></select>
+				</td>
 			</tr>
 			<tr class="line0">
 				<th>Semestr</th>
@@ -47,7 +49,9 @@
 			</tr>
 			<tr class="line0">
 				<th>Waga</th>
-				<td><input id="avWeight" type="number" tabindex="3" value="1" class="left"></td>
+				<td>
+					<input id="avWeight" type="number" tabindex="3" value="1" class="left">
+				</td>
 			</tr>
 		</tbody>
 		<tfoot>
