Add option "ignore countToAverageFlag" , fix form hidding

--- a/src/floating.html
+++ b/src/floating.html
@@ -53,6 +53,12 @@
 					<input id="avWeight" type="number" tabindex="3" value="1" class="left">
 				</td>
 			</tr>
+			<tr class="line1">
+				<th title="Liczy oceny z informacją 'Licz do średniej: nie' jako oceny z wagą 1">Licz wszystkie oceny do średniej</th>
+				<td>
+					<input id="avIgnoreCountToAverage" type="checkbox" tabindex="4" class="styled">
+				</td>
+			</tr>
 		</tbody>
 		<tfoot>
 			<tr>
